--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -16,9 +16,9 @@ $color: (
 		3: #E3E7EB
 	),
 	primary: (
-		1: #4992F0,
+		1: #3c50ec,
 		2: #75ABF3,
-		3: #1274ED,
+		3: #3c50ec,
  	),
  	secondary: (
 		1: #838DEA,
