--- a/src/scss/layout/_hero.scss
+++ b/src/scss/layout/_hero.scss
@@ -1,7 +1,7 @@
 .hero {
     position: relative;
     padding-top: 40px;
-    padding-bottom: 40px;
+    // padding-bottom: 40px;
 }
 
 .hero-paragraph {
@@ -74,7 +74,7 @@
 
     .hero {
         padding-top: 80px;
-        padding-bottom: 120px;
+        // padding-bottom: 120px;
     }
 
     .hero-paragraph {
